# A-Report-on-the-Ziggurat-Method

./: Makefile  README.md  main.tex  pyproject.toml  report.tex
.githooks/: pre-commit
tex/: README.md  bibliography.bib  report.tex  slides.tex
ziggurat/: generate_tables.py
