[tool.poetry]
name = "ziggurat"
version = "0.1.0"
description = "This report outlines, as well as provides a mathematical proof of functionality, of a highly efficient pseudo-random number generator: The Ziggurat Method. A simple ready-to-use code has been provided by previous authors. We contribute to this with a speed test on a modern Intel processor, as well as a Python script that generates all the necessary information to implement a specific version of the algorithm."
authors = ["dsevero <danielsouzasevero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.16"
scipy = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
